# mingw32-libmincrypt

./: AUTHORS  Makefile.am  README  autobuild.sh  configure.ac  mincrypt.nsis  mingw32-libmincrypt.spec
src/: Makefile.am  asymmetric.c  byteops.c  crc32.c  mincrypt-tui.c  mincrypt.c  mincrypt.h
tests/: Makefile.am  runtests.sh  test-asymmetric.sh  test-binary.sh
