check:
	@echo "############################################################################################################################################"
	@echo "Note: If the tests fail, it may be the issue of wine emulation instead of not working code. Please try using on Windows VM or Windows system"
	@echo "############################################################################################################################################"
	./runtests.sh
